--- a/Data2Serial2/Settings1.settings
+++ b/Data2Serial2/Settings1.settings
@@ -45,11 +45,8 @@
     <Setting Name="lastBaudRateIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="files" Type="System.Collections.Specialized.StringDictionary" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="lastFileBoxIndex" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+    <Setting Name="howToScroll" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
