font select dialog added

--- a/Data2Serial2/Settings1.settings
+++ b/Data2Serial2/Settings1.settings
@@ -60,5 +60,8 @@
     <Setting Name="stopBitIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="terminalFont" Type="System.Drawing.Font" Scope="User">
+      <Value Profile="(Default)">Microsoft Sans Serif, 8.25pt</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
