opacity option added

--- a/Data2Serial2/Settings1.settings
+++ b/Data2Serial2/Settings1.settings
@@ -66,5 +66,8 @@
     <Setting Name="isOnTop" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="opacity" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
